# fastICA

./: DESCRIPTION  INDEX  MD5  NAMESPACE  cleanup  configure  configure.ac  configure.in  configure.win
R/: fastICA.R  zzz.R
inst/: HISTORY  README
man/: FastICA.Rd  fastICA.Rd  ica.R.def.Rd  ica.R.par.Rd
src/: Makevars.in  Makevars.win  fastICA-win.def  ica.c  lsame.unused  sblas.unused  slamc.unused  slapack.unused
