AC_INIT(src/ica.c)
: ${R_HOME=`R RHOME`}
if test -z "${R_HOME}"; then
  echo "could not determine R_HOME"
  exit 1
fi
CC=`grep "^CC" ${R_HOME}/etc/Makeconf | sed "s/^CC *= *//"`
FLIBS=`grep "^FLIBS" ${R_HOME}/etc/Makeconf | sed "s/^FLIBS *= *//"`
BLAS_LIBS=`grep "^BLAS_LIBS" ${R_HOME}/etc/Makeconf | sed "s/^BLAS_LIBS *= *//"`
if test -z "${BLAS_LIBS}"; then
  echo "could not find your BLAS library: using our routines"
  (cd src; ln -s sblas.unused sblas.f)
fi

if test -n "`grep HAVE_F77_UNDERSCORE ${R_HOME}/include/Rconfig.h | \
             grep '#define'`"; then
  have_f77_underscore=true
elif test -n "`grep F77 ${R_HOME}/include/Rconfig.h | grep '_$'`"; then
  have_f77_underscore=true
fi
if ${have_f77_underscore}; then
  sgesvd_func=sgesvd_
else
  sgesvd_func=sgesvd
fi
AC_CHECK_LIB(lapack, ${sgesvd_func},BLAS_LIBS="-llapack ${BLAS_LIBS}", 
  NO_LIBLAPACK=1, [${BLAS_LIBS} ${FLIBS}])
if test ${NO_LIBLAPACK}; then
  echo "could not find SGESVD in your LAPACK library, using our routines"
  (cd src; ln -s slapack.unused slapack.f)
fi

AC_SUBST(BLAS_LIBS)
AC_OUTPUT(src/Makevars)
